[package]
name = "askuserquestion"
version = "0.1.0"
edition = "2021"
description = "Native GUI dialog for asking users questions"
license = "MIT"
repository = ""

[[bin]]
name = "askuserquestion"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
